# distrowatcher

./: .gitignore  CMakeLists.txt  LICENSE.GPL3  README  README.md  RELEASE_PATH  TESTCASES  changelog.txt  createAndTest.sh  deb.CMakeLists.txt  debianBuild.sh  kNewHostStuff.sh  metadata.desktop.template
distrowatcher/: metadata.desktop  metadata.desktop.template
distrowatcher/contents/code/: logic.js
distrowatcher/contents/config/: config.qml  main.xml
distrowatcher/contents/ui/: Distro.qml  DistroListModel.qml  FavoriteDistro.qml  FavoriteDistroListModel.qml  FavoriteDistrosScreen.qml  HorizontalLayout.qml  LatestDistrosScreen.qml  LatestPackage.qml  LatestPackageListModel.qml  LatestPackagesScreen.qml  News.qml  NewsListModel.qml  NewsScreen.qml  SearchableFavorites.qml  UnavailableScreen.qml  VerticalLayout.qml  config.ui  configAppearance.qml  configGeneral.qml  distrolist.xml  distrowatcher.qml  dw.xml  dwd.xml  dwp.xml  main.qml  sample_dwp.xml
distrowatcher/contents/ui/js/: globals.js  style.js
po/: de.po  el.po  es.po  it.po  lt.po  messages.sh  plasma_applet_org.kde.distrowatcher.pot  ru.po  sv.po  uz.po  zh_TW.po
